Fixed flickering caused by inpropper CSS/HTMX config

--- a/docker/web/nspanelmanager/web/static/css/build.css
+++ b/docker/web/nspanelmanager/web/static/css/build.css
@@ -3,16 +3,16 @@
     themes: all;
 }
 
-
 .modal {
     &.htmx-request {
-    background-color: oklch(0% 0 0/ 0.4);
-    pointer-events: auto;
-    visibility: visible;
-    opacity: 100%;
-    .modal-box {
-        translate: 0 0;
-        scale: 1;
-        opacity: 1;
+        background-color: oklch(0% 0 0/ 0.4);
+        pointer-events: auto;
+        visibility: visible;
+        opacity: 100%;
+        .modal-box {
+            translate: 0 0;
+            scale: 1;
+            opacity: 1;
+        }
     }
 }
