--- a/docker/web/nspanelmanager/web/static/css/main.css
+++ b/docker/web/nspanelmanager/web/static/css/main.css
@@ -10252,6 +10252,19 @@
     }
   }
 }
+.modal {
+  &.htmx-request {
+    background-color: oklch(0% 0 0/ 0.4);
+    pointer-events: auto;
+    visibility: visible;
+    opacity: 100%;
+    .modal-box {
+      translate: 0 0;
+      scale: 1;
+      opacity: 1;
+    }
+  }
+}
 @layer base {
   :where(:root),:root:has(input.theme-controller[value=light]:checked),[data-theme=light] {
     color-scheme: light;
